.provarCaches/00D6C0000000xA6UAI/objects/ccrz__E_AccountAddressBook__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>ccrz__AccountId__c</fullName>
        <description>Account id in text form to work around account sharing issue</description>
        <label>AccountId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that owns the address book entry</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Address Books</relationshipLabel>
        <relationshipName>E_AccountAddressBooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__AddressBookId__c</fullName>
        <description>External Id for Address Book</description>
        <externalId>true</externalId>
        <label>Address Book Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__AddressType__c</fullName>
        <description>Indicates which type of address correponds to the address book entry</description>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to determine whether or not this address book entry is a default</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__E_ContactAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Contact Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Address Books</relationshipLabel>
        <relationshipName>E_Account_Address_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Account_Address_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__TypeReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether an shipping address can be made billing address and vice versa</description>
        <label>TypeReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <label>CC Account Address Book</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Account__c</columns>
        <columns>ccrz__AccountId__c</columns>
        <columns>ccrz__AddressType__c</columns>
        <columns>ccrz__E_ContactAddress__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Account Address Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>